# scratch-tool

./: DEPLOYMENT.md  FORMAT_COMPLIANCE_CHECK.md  GUNICORN.md  README.md  RENDER_AUTO_DEPLOY.md  RENDER_DEPLOYMENT.md  RENDER_QUICKSTART.md  RENDER_VISUAL_GUIDE.md  UV_ON_RENDER.md  all-blocks-project.json  dump-code.sh  example_usage.py  gunicorn.conf.py  html_docgen.py  main.py  models.py  music-details.txt  project-meta-fail.json  project-meta-pass.json  pyproject.toml  render_start.sh  requirements.txt  run-all.sh  scratch-opcodes-list.html  scratch-project-format.html  scratchblocks-sample.html  scratchblocks_converter.py  server.py  test-project.sb3  test_main.py  test_project_models.py  test_utils.py  utils.py
models/: __init__.py  project.py
samples/: All Blocks-1259204833-doc.html  All Blocks-1259204833-metadata.json  All Blocks-1259204833-project.json  Asteroids-560784879-doc.html  Asteroids-560784879-metadata.json  Asteroids-560784879-project.json  Example - clones & video-555715093-doc.html  Example - clones & video-555715093-metadata.json  Example - clones & video-555715093-project.json  Firework-565744492-doc.html  Firework-565744492-metadata.json  Firework-565744492-project.json  Hangman-566383445-doc.html  Hangman-566383445-metadata.json  Hangman-566383445-project.json  Memory-566086782-doc.html  Memory-566086782-metadata.json  Memory-566086782-project.json  Snowball fight-1252755893-doc.html  Snowball fight-1252755893-metadata.json  Snowball fight-1252755893-project.json  Treasure Clicker-592795173-doc.html  Treasure Clicker-592795173-metadata.json  (+1 more)
(+1 files in other folders)
